--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -19,7 +19,8 @@
   <view class="info">
       <text class="name">{{pro[0]}}</text>
       <text class="price">¥{{pro[1]}}元</text>
-      <text class="re">{{pro[9]}}件</text>
+      <text class="re">{{pro[10]}}件</text>
+      <text class="a">{{pro[9]}}件</text>
   </view>
   <text class="title">产品详情介绍</text>
   <view class="wrap">
