--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,31 +1,31 @@
 <scroll-view scroll-y>
-<text class="title">产品详情</text>
+<text class="title"><text class="name">{{pro[1]}}</text></text>
   <view class="wrap">
     <swiper autoplay circular indicator-dots>
       <swiper-item>
-        <video src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400" controls="true"></video>
+        <image src="{{pro[7]}}"></image>
       </swiper-item>
       <swiper-item>
-        <image src="{{pro.src1}}"></image>
+        <image src="{{pro[8]}}"></image>
       </swiper-item>
       <swiper-item>
-        <image src="{{product.src2}}"></image>
+        <image src="{{pro[9]}}"></image>
       </swiper-item>
       <swiper-item>
-        <image src="{{product.src3}}"></image>
+        <image src="{{pro[10]}}"></image>
       </swiper-item>    
     </swiper>
   </view>
   <view class="info">
-      <text class="name">{{pro[0]}}</text>
-      <text class="price">¥{{pro[1]}}元</text>
-      <text class="num">{{pro[9]}}件</text>
+      <text class="price">¥{{pro[3]}}元</text>
+      <text class="num">{{pro[5]}}</text>
   </view>
   <text class="title">产品详情介绍</text>
   <view class="wrap">
-    <image src="{{product.src4}}" mode="widthFix"></image>
-    <image src="{{product.src5}}" mode="widthFix"></image>
-    <image src="{{product.src6}}" mode="widthFix"></image>
+    <image src="{{pro[11]}}" mode="widthFix"></image>
+    <image src="{{pro[12]}}" mode="widthFix"></image>
+    <image src="{{pro[13]}}" mode="widthFix"></image>
+    <image src="{{pro[14]}}" mode="widthFix"></image>
   </view>
 </scroll-view>
 <view class="bottom">
