--- a/pages/orders/orders.wxml
+++ b/pages/orders/orders.wxml
@@ -10,10 +10,11 @@
 
     <view class="orders-box">
         <view wx:for="{{orders}}" wx:key="index" class="orders-list">
-            <image class="orders-thumb" src="{{item.image}}"></image>
-            <view class="orders-pro-name">{{item.title}}</view>
-            <view class="orders-pro-price">￥{{item.price}}</view>
-            <view class="orders-count-num">×{{item.num}}</view>
+            <image class="orders-thumb" src="{{item[7]}}"></image>
+            <wxs src="../../utils/app.wxs" module="tools"/>
+            <view class="orders-pro-name">{{tools.substring(item[1],17)}}</view>
+            <view class="orders-pro-price">￥{{item[3]}}</view>
+            <view class="orders-count-num">×{{item[15]}}</view>
         </view>
     </view>
 
